--- a/suporte.css
+++ b/suporte.css
@@ -99,7 +99,7 @@ header-left{
 
 
 section.destaque{
-  background-image: url(assets/1d.png);
+  background-image: url(assets/1.jpg);
   top: 50px;
   bottom: 60px;
   margin: 0%;
