--- a/index.css
+++ b/index.css
@@ -256,12 +256,15 @@ section.destaque{
     }
 
   .footerio {
-    padding: 35px 0;
-    width: 130%;
+    padding: 30px 0;
     background: #222;
     color: #777;
     text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin: 0;
     
   }
 
